{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 1152,
  "lineage": "d2a516e3-1c45-4deb-0c8c-068a20f0c222",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/external-nic-0",
            "internal_domain_name_suffix": "vzlkhvvgxbkexcphzv3eyqccbb.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet/subnets/external"
              }
            ],
            "location": "westus2",
            "name": "external-nic-0",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "test_vp_demo_westus2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/external-nic-1",
            "internal_domain_name_suffix": "vzlkhvvgxbkexcphzv3eyqccbb.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet/subnets/external"
              }
            ],
            "location": "westus2",
            "name": "external-nic-1",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "test_vp_demo_westus2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/internal-nic-0",
            "internal_domain_name_suffix": "vzlkhvvgxbkexcphzv3eyqccbb.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet/subnets/internal"
              }
            ],
            "location": "westus2",
            "name": "internal-nic-0",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "test_vp_demo_westus2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/internal-nic-1",
            "internal_domain_name_suffix": "vzlkhvvgxbkexcphzv3eyqccbb.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet/subnets/internal"
              }
            ],
            "location": "westus2",
            "name": "internal-nic-1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "test_vp_demo_westus2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/mgmt-nic-0",
            "internal_domain_name_suffix": "vzlkhvvgxbkexcphzv3eyqccbb.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.0.3.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/publicIPAddresses/mgmt-pip-0",
                "subnet_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet/subnets/mgmt"
              }
            ],
            "location": "westus2",
            "name": "mgmt-nic-0",
            "private_ip_address": "10.0.3.5",
            "private_ip_addresses": [
              "10.0.3.5"
            ],
            "resource_group_name": "test_vp_demo_westus2"
          },
          "dependencies": [
            "azurerm_public_ip.mgmt_pip",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/mgmt-nic-1",
            "internal_domain_name_suffix": "vzlkhvvgxbkexcphzv3eyqccbb.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/publicIPAddresses/mgmt-pip-1",
                "subnet_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet/subnets/mgmt"
              }
            ],
            "location": "westus2",
            "name": "mgmt-nic-1",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "test_vp_demo_westus2"
          },
          "dependencies": [
            "azurerm_public_ip.mgmt_pip",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/external-nic-0|/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/external-nsg-0",
            "network_interface_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/external-nic-0",
            "network_security_group_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/external-nsg-0"
          },
          "dependencies": [
            "azurerm_network_interface.external",
            "azurerm_network_security_group.external",
            "azurerm_resource_group.rg",
            "azurerm_route_table.outbound",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/external-nic-1|/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/external-nsg-1",
            "network_interface_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/external-nic-1",
            "network_security_group_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/external-nsg-1"
          },
          "dependencies": [
            "azurerm_network_interface.external",
            "azurerm_network_security_group.external",
            "azurerm_resource_group.rg",
            "azurerm_route_table.outbound",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/internal-nic-0|/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/internal-nsg-0",
            "network_interface_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/internal-nic-0",
            "network_security_group_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/internal-nsg-0"
          },
          "dependencies": [
            "azurerm_network_interface.internal",
            "azurerm_network_security_group.internal",
            "azurerm_resource_group.rg",
            "azurerm_route_table.internal",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/internal-nic-1|/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/internal-nsg-1",
            "network_interface_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/internal-nic-1",
            "network_security_group_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/internal-nsg-1"
          },
          "dependencies": [
            "azurerm_network_interface.internal",
            "azurerm_network_security_group.internal",
            "azurerm_resource_group.rg",
            "azurerm_route_table.internal",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/mgmt-nic-0|/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/mgmt-nsg-0",
            "network_interface_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/mgmt-nic-0",
            "network_security_group_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/mgmt-nsg-0"
          },
          "dependencies": [
            "azurerm_network_interface.external",
            "azurerm_network_interface.mgmt",
            "azurerm_network_security_group.mgmt",
            "azurerm_public_ip.mgmt_pip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.outbound",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/mgmt-nic-1|/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/mgmt-nsg-1",
            "network_interface_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkInterfaces/mgmt-nic-1",
            "network_security_group_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/mgmt-nsg-1"
          },
          "dependencies": [
            "azurerm_network_interface.external",
            "azurerm_network_interface.mgmt",
            "azurerm_network_security_group.mgmt",
            "azurerm_public_ip.mgmt_pip",
            "azurerm_resource_group.rg",
            "azurerm_route_table.outbound",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/external-nsg-0",
            "location": "westus2",
            "name": "external-nsg-0",
            "resource_group_name": "test_vp_demo_westus2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "443 outbound",
                "destination_address_prefix": "10.0.2.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "HTTPSOutbound_external",
                "priority": 1100,
                "protocol": "TCP",
                "source_address_prefix": "10.0.1.0/25",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "443",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow Internet outbound",
                "destination_address_prefix": "10.0.2.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowInternetOut_external",
                "priority": 1300,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow vnet outbound",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowVnetOut_external",
                "priority": 1200,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "SMTP outbound",
                "destination_address_prefix": "10.0.2.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "SMTPOutbound_external",
                "priority": 1000,
                "protocol": "TCP",
                "source_address_prefix": "10.0.1.0/25",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "25",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows load balaner inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowLBIn_external",
                "priority": 1100,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows vnet inbound",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInbound_external",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "Default deny all inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyInbound_external",
                "priority": 1200,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "Default deny all outbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyOutbound_external",
                "priority": 1400,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.external",
            "azurerm_resource_group.rg",
            "azurerm_route_table.outbound",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/external-nsg-1",
            "location": "westus2",
            "name": "external-nsg-1",
            "resource_group_name": "test_vp_demo_westus2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "443 outbound",
                "destination_address_prefix": "10.0.2.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "HTTPSOutbound_external",
                "priority": 1100,
                "protocol": "TCP",
                "source_address_prefix": "10.0.1.0/25",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "443",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow Internet outbound",
                "destination_address_prefix": "10.0.2.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowInternetOut_external",
                "priority": 1300,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow vnet outbound",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowVnetOut_external",
                "priority": 1200,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "SMTP outbound",
                "destination_address_prefix": "10.0.2.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "SMTPOutbound_external",
                "priority": 1000,
                "protocol": "TCP",
                "source_address_prefix": "10.0.1.0/25",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "25",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows load balaner inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowLBIn_external",
                "priority": 1100,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows vnet inbound",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInbound_external",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "Default deny all inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyInbound_external",
                "priority": 1200,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "Default deny all outbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyOutbound_external",
                "priority": 1400,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.external",
            "azurerm_resource_group.rg",
            "azurerm_route_table.outbound",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/internal-nsg-0",
            "location": "westus2",
            "name": "internal-nsg-0",
            "resource_group_name": "test_vp_demo_westus2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "allows ICMP inbound",
                "destination_address_prefix": "10.0.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_ICMP",
                "priority": 1900,
                "protocol": "ICMP",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1022 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1022",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1022_in",
                "priority": 1700,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1023 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1023",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1023_in",
                "priority": 1800,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1026 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1026",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow1026",
                "priority": 101,
                "protocol": "udp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1101 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1101",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1101_in",
                "priority": 1400,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1102 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1701",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1102_in",
                "priority": 1500,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1501 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1501",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1501_in",
                "priority": 1600,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1701 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1701",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1701_in",
                "priority": 1300,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1901 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1901",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1901_in",
                "priority": 1200,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 22 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow22",
                "priority": 102,
                "protocol": "udp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 25 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "25",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSMTP",
                "priority": 1100,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 4353 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "4353",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow4353",
                "priority": 100,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 443 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 1000,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 6123-6128 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "6123-6128",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowASMSync",
                "priority": 103,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "Deny all",
                "destination_address_prefix": "10.0.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny_inbound_all",
                "priority": 2000,
                "protocol": "*",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.internal",
            "azurerm_resource_group.rg",
            "azurerm_route_table.internal",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/internal-nsg-1",
            "location": "westus2",
            "name": "internal-nsg-1",
            "resource_group_name": "test_vp_demo_westus2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "allows ICMP inbound",
                "destination_address_prefix": "10.0.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_ICMP",
                "priority": 1900,
                "protocol": "ICMP",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1022 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1022",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1022_in",
                "priority": 1700,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1023 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1023",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1023_in",
                "priority": 1800,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1026 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1026",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow1026",
                "priority": 101,
                "protocol": "udp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1101 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1101",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1101_in",
                "priority": 1400,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1102 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1701",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1102_in",
                "priority": 1500,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1501 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1501",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1501_in",
                "priority": 1600,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1701 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1701",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1701_in",
                "priority": 1300,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 1901 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1901",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_1901_in",
                "priority": 1200,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 22 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow22",
                "priority": 102,
                "protocol": "udp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 25 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "25",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSMTP",
                "priority": 1100,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 4353 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "4353",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow4353",
                "priority": 100,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 443 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 1000,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 6123-6128 inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "6123-6128",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowASMSync",
                "priority": 103,
                "protocol": "tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "Deny all",
                "destination_address_prefix": "10.0.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny_inbound_all",
                "priority": 2000,
                "protocol": "*",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.internal",
            "azurerm_resource_group.rg",
            "azurerm_route_table.internal",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/mgmt-nsg-0",
            "location": "westus2",
            "name": "mgmt-nsg-0",
            "resource_group_name": "test_vp_demo_westus2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow Internet outbound",
                "destination_address_prefix": "10.0.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowInternetOut_mgmt",
                "priority": 1100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow vnet outbound",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowVnetOut_mgmt",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows load balancer inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowLBIn_mgmt",
                "priority": 1400,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 22 inbound",
                "destination_address_prefix": "10.0.3.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowICMP_mgmt",
                "priority": 1200,
                "protocol": "ICMP",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 22 inbound",
                "destination_address_prefix": "10.0.3.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH_mgmt",
                "priority": 1100,
                "protocol": "tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 443 inbound",
                "destination_address_prefix": "10.0.3.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS_mgmt",
                "priority": 1000,
                "protocol": "tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows vnet inbound",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetIn_mgmt",
                "priority": 1300,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "Default deny all inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyInbound_mgmt",
                "priority": 1500,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.external",
            "azurerm_resource_group.rg",
            "azurerm_route_table.outbound",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/networkSecurityGroups/mgmt-nsg-1",
            "location": "westus2",
            "name": "mgmt-nsg-1",
            "resource_group_name": "test_vp_demo_westus2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow Internet outbound",
                "destination_address_prefix": "10.0.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowInternetOut_mgmt",
                "priority": 1100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow vnet outbound",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowVnetOut_mgmt",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows load balancer inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowLBIn_mgmt",
                "priority": 1400,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 22 inbound",
                "destination_address_prefix": "10.0.3.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowICMP_mgmt",
                "priority": 1200,
                "protocol": "ICMP",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 22 inbound",
                "destination_address_prefix": "10.0.3.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH_mgmt",
                "priority": 1100,
                "protocol": "tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows port 443 inbound",
                "destination_address_prefix": "10.0.3.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS_mgmt",
                "priority": 1000,
                "protocol": "tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allows vnet inbound",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetIn_mgmt",
                "priority": 1300,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "Default deny all inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyInbound_mgmt",
                "priority": 1500,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.external",
            "azurerm_resource_group.rg",
            "azurerm_route_table.outbound",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mgmt_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "vp0",
            "fqdn": "vp0.westus2.cloudapp.azure.com",
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/publicIPAddresses/mgmt-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.64.169.88",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "mgmt-pip-0",
            "resource_group_name": "test_vp_demo_westus2",
            "sku": "Standard",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "vp1",
            "fqdn": "vp1.westus2.cloudapp.azure.com",
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/publicIPAddresses/mgmt-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.64.169.106",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "mgmt-pip-1",
            "resource_group_name": "test_vp_demo_westus2",
            "sku": "Standard",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/routeTables/route_table_internal",
            "location": "westus2",
            "name": "route_table_internal",
            "resource_group_name": "test_vp_demo_westus2",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "internal",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.internal",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/routeTables/route_table_outbound",
            "location": "westus2",
            "name": "route_table_outbound",
            "resource_group_name": "test_vp_demo_westus2",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "outbound",
                "next_hop_in_ip_address": "10.0.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.external",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet/subnets/internal",
            "route_table_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/routeTables/route_table_internal",
            "subnet_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_interface.internal",
            "azurerm_resource_group.rg",
            "azurerm_route_table.internal",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet/subnets/external",
            "route_table_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/routeTables/route_table_outbound",
            "subnet_id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet/subnets/external"
          },
          "dependencies": [
            "azurerm_network_interface.external",
            "azurerm_resource_group.rg",
            "azurerm_route_table.outbound",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "d6a356ae-b8a6-4b54-89e7-cd7a4c404209",
            "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet",
            "location": "westus2",
            "name": "test_vp_demo_westus2_vnet",
            "resource_group_name": "test_vp_demo_westus2",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet/subnets/internal",
                "name": "internal"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet/subnets/external",
                "name": "external"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/fb68876b-4b4b-4f31-bf78-605e8d18cc2d/resourceGroups/test_vp_demo_westus2/providers/Microsoft.Network/virtualNetworks/test_vp_demo_westus2_vnet/subnets/mgmt",
                "name": "mgmt"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}